--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   php-apache:
     build: .
     ports:
-      - "8080:80" # Maps port 8080 on the host to port 80 in the container
+      - "8080:80"
     volumes:
       - ./src:/var/www/html
     depends_on:
@@ -23,6 +23,8 @@ services:
       - "3307:3306"
     volumes:
       - db_data:/var/lib/mysql
+      # Optional: Ensure your init.sql file is mounted correctly
+      # If init.sql is not needed, remove the line below.
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
 
 volumes:
